<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:focusable="false"
            android:hint="@string/input_hint"
            android:importantForAccessibility="yes"
            android:inputType="numberDecimal"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnUndo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/undo_text"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mc_text"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#000000"
                android:maxWidth="320dp" />

            <Button
                android:id="@+id/btnMR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr_text"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#000000"
                android:maxWidth="320dp" />

            <Button
                android:id="@+id/btnMS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ms_text"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#000000"
                android:maxWidth="320dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_7"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_8"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_9"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_4"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_5"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_6"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_1"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_2"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num_3"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#000000"
                    android:maxWidth="300dp" />

                <Button
                    android:id="@+id/btnSubtract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtract"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxWidth="320dp"
                    android:text="@string/num_0"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/equals_text"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
